# lot-trace-app

./: CREATE_FROM_STOCK_FEATURE.md  IMPLEMENTATION_GUIDE.md  PHASE5_CONTINUATION_NOTE.md  PHASE6_V2_MIGRATION_GUIDE.md  README.md  REVIEW_AND_RECOMMENDATIONS.md  pyproject.toml
TODO_APP/: README.md  app.js  index.html  styles.css
lot_trace/: hooks.py  hooks_phase6_snippet.py  patches.txt
lot_trace/api/: __init__.py  cleanup.py  create_from_stock.py  dashboard.py  flow.py  lot.py  tree.py
lot_trace/events/: __init__.py  common.py  common_helpers.py  delivery.py  lot_factory.py  lot_factory_v2.py  purchase_receipt.py  purchase_receipt_v2.py  repair.py  resolver.py  resolver_v2.py  root_lot_cleanup.py  stock_entry.py  subcontracting_receipt.py
lot_trace/fixtures/: custom_field.json  lot_process_stage.json  role.json
lot_trace/lot_trace/doctype/lot_batch_naming_rule/: lot_batch_naming_rule.json  lot_batch_naming_rule.py
lot_trace/lot_trace/doctype/lot_consumption_detail/: lot_consumption_detail.json  (+1 more)
lot_trace/patches/: __init__.py  v6_0_add_custom_fields.py  v6_0_extend_root_lot.py  v6_0_migrate_naming_rules_to_profiles.py  v6_1_simplify_profile_to_rule.py  v6_2_repair_fields.py  v6_3_dedupe_root_lot_fields.py
lot_trace/phase4/: README_PHASE4.md
lot_trace/public/js/: purchase_receipt.js  root_lot_form.js  root_lot_list.js
lot_trace_v2/: DESIGN_AND_PLAN.md  FRAPPE_CLOUD_TESTING_GUIDE.md  USER_GUIDE.md
lot_trace_v2/docs/: lot_trace_tree_v2.html
lot_trace_v2/lot_trace/lot_trace/: hooks.py  modules.txt
tests/: test_numbering_sim.py
(+57 files in other folders)
