[project]
name = "lot_trace"
authors = [
    {name = "Rangsutra", email = "sunil.mehra@rangsutra.com"}
]
description = "Lot traceability for textile manufacturing (yarn - dyeing - weaving - cutting)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
